Kubernetes_Local/SonarQube/0-account.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: sonarqube
