Kubernetes_Local/SonarQube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonar-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
     - http:
        paths:
          - path: "/sonar/api/monitoring/metrics"
            pathType: Prefix
            backend:
              service:
                name: sonar-svc
                port:
                  number: 9000
